# pii-redactor

./: .env.example  .gitignore  CLAUDE.md  README.md  evaluator.py  examples.py  main.py  optimizer.py  pyproject.toml  redactor.py
docs/plans/: 2026-02-08-gepa-optimization-design.md  2026-02-08-pii-redactor-design.md  2026-02-08-reflection-model-design.md  add-evaluate-randomize.md  add-evaluate.md
tests/integration/: test_redact.py
tests/unit/: test_cli.py  test_evaluator.py  test_examples.py  test_optimizer.py  test_pii_entity.py  test_redactor.py
